# real-dedupe-renamer

./: CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  package.json
.github/workflows/: release.yml
docs/: DECISIONS.md  FEATURES.md  LEGACY_PYTHON_POLICY.md  PROJECT_LOG.md  ROADMAP.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  grouper.rs  hasher.rs  lib.rs  media_meta.rs  settings.rs  types.rs
src-tauri/tests/: e2e_smoke.rs
src/components/: RenameComponentBuilder.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx
