[package]
name = "real-dedupe-renamer"
version = "2.1.0"
edition = "2021"
description = "Find and remove duplicate files"

[lib]
name = "real_dedupe_renamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
open = "5"
tokio = { version = "1", features = ["rt"] }
infer = "0.16"
kamadak-exif = "0.6"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
